--- a/my-project/src/pages/ProductCard.css
+++ b/my-project/src/pages/ProductCard.css
@@ -1,16 +1,19 @@
 .product-card {
   position: relative;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  transition: transform 0.5s ease, box-shadow 0.3s ease;
   margin: 15px;
-  width: 100%;
-  max-width: 180px; /* Adjust max-width in media queries for responsiveness */
+  width: 220px;
+  max-width: 240px; /* Adjust max-width in media queries for responsiveness */
   height: auto; /* Change to auto for better resizing */
   border: 1px solid #ddd;
   border-radius: 8px;
   overflow: hidden;
   background-color: #fff;
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column; /* Use flex to better manage internal spacing */
+  padding: 15px;
 }
 
 .product-card:hover {
@@ -19,13 +22,19 @@
 }
 
 .product-card img {
+  width: 150px;
+}
+
+.card-image{
   width: 100%;
-  height: 180px; /* Set a fixed height for consistency */
-  object-fit: cover; /* Ensure the image covers the area properly */
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .card-body {
-  padding: 10px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start; /* Align content to the start of the container */
@@ -37,33 +46,35 @@
   align-self: flex-start; /* Align title to the start (left) of the flex container */
   margin: 0 0 10px 0; /* Reduce the top margin to bring the title higher */
   padding: 0; /* Adjust padding as needed */
-  text-align: left; /* Text alignment to the left */
+  text-align: center; /* Text alignment to the left */
   width: 100%; /* Full width to respect left alignment */
   font-weight: bold; /* Make text bold */
 }
 
 .card-text {
-  margin: 0;
+  margin: 0;  object-fit: cover; /* Ensure the image covers the area properly */
+  text-align: center;
   padding: 5px 0;
   text-align: center; /* Ensure text is centered */
   width: 100%; /* Full width to center text properly */
 }
 
 .Price-text {
-  position: absolute;
-  bottom: 10px;
-  left: 10px;
-  width: auto;
-  margin: 0;
-  padding: 0;
   text-align: left;
   font-size: 14px; /* Adjust font size for readability */
 }
 
+.price-cart{
+  margin-top: 10px;
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+}
+
 .cart-icon-container {
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
   cursor: pointer;
 }
 
@@ -79,7 +90,7 @@
 /* Media Queries */
 @media (min-width: 1024px) {
   .product-card {
-    max-width: 180px; /* Reduced max-width for desktops */
+    max-width: 240px; /* Reduced max-width for desktops */
     height: 300px; /* Increased height */
   }
 }
